# air_traffic_flow_management

./: .gitignore  LICENSE  Readme.md  pyproject.toml  pytest.ini
.github/workflows/: unittest.yml
config/: config_path_and_name.ini
data/example/input/: enter_events.csv  periods.csv
data/example/raw/: enter_events.csv
data/test/output/: air_traffic_flows.csv
data/test/raw/: enter_events.csv  periods.csv  sectors.csv
data/test/result/: air_traffic_flows.csv
src/: __main__.py
src/app/: main_process.py
src/infra/: drawer.py  local_repository.py  path_filename_generator.py
src/infra/cplex/: scheduler.py  scheduling_model_builder.py
src/logger/: logger.py
src/model/: air_traffic_flow.py  enter_event.py  flight.py  main_process.py  period.py  repository.py  sched_atfm.mod  sector.py  time.py
src/model/air_traffic_flow_scheduler/: input.py  output.py  parameters.py  scheduler.py  scheduling_model_builder.py
src/optimizer/: cplex_optimizer.py  optimizer.py  optimizer_input.py  optimizer_output.py  optimizer_parameters.py
src/utils/: file_util.py
test/: test_air_traffic_flow_scheduler.py  test_period.py  test_repository.py  test_time.py
test/optimizer/: test_optimizer.py  test_optimizer_parameters.py
